test failures in gnupg 2.1.22 when using configure --disable-scdaemon
Closed, ResolvedPublic

Assigned To
Authored By
chdiza
Jul 29 2017, 6:50 AM

Description

I just tried to build gnupg 2.1.22 on macOS 10.12.6. It built, but the tests failed with the following:

Making check in openpgp
LC_ALL=C EXEEXT= PATH=../gpgscm:/usr/local/hb/Library/Homebrew/shims/super:/usr/bin:/bin:/usr/sbin:/sbin abs_top_srcdir=/Users/chdiza/.tmp/tmpdir/gnoopeegee-20170729-18272-ck4mgd/gnupg-2.1.22 objdir=/Users/chdiza/.tmp/tmpdir/gnoopeegee-20170729-18272-ck4mgd/gnupg-2.1.22 GPGSCM_PATH=/Users/chdiza/.tmp/tmpdir/gnoopeegee-20170729-18272-ck4mgd/gnupg-2.1.22/tests/gpgscm /Users/chdiza/.tmp/tmpdir/gnoopeegee-20170729-18272-ck4mgd/gnupg-2.1.22/tests/gpgscm/gpgscm \
	  /Users/chdiza/.tmp/tmpdir/gnoopeegee-20170729-18272-ck4mgd/gnupg-2.1.22/tests/openpgp/run-tests.scm
/Users/chdiza/.tmp/tmpdir/gnoopeegee-20170729-18272-ck4mgd/gnupg-2.1.22/tests/gpgscm/init.scm:11: cdr: argument 1 must be: pair, got: boolean
0: init.scm:11: (cdr x)
1: defs.scm:194: (:gc:c:pgmname (assoc (symbol->string which) gpg-components))
2: defs.scm:355: (tool 'scdaemon)
FAIL: tests/openpgp/setup.scm
Setup failed.
make[2]: *** [xcheck] Error 1
make[1]: *** [check-recursive] Error 1
make: *** [check-recursive] Error 1

2.1.21 passes all the tests, provided the patch to ""Suppress error for card availability check" is applied.

Please let me know if you need further information.

Details

Version
2.1.22

Event Timeline

The "Suppress error for card availability check" (https://dev.gnupg.org/rGa8dd96826f8484c0ae93c954035b95c2a75c80f2) won't cleanly apply to 2.1.22, so my build was without it.

werner added a project: MacOS.
werner added a subscriber: werner.

Sure it won't apply because it is part of 2.1.22. ;-)

It builds for us on our Sierra box. See jenkins.gnupg.org.
Please ask the homebrew guys for help on how to build it on that system

I've found that I can get the test to succeed if I drop --disable-scdaemon from my configure flags. I'm far from qualified to diagnose this, but I suspect that the tests have a bug in which they still try to test the scdaemon despite the presence of --disable-scdaemon in the configure flags.

I can even reproduce the test failure within Homebrew just by adding "--disable-scdaemon" to their configure flags.

werner renamed this task from test failures in gnupg 2.1.22 on macOS to test failures in gnupg 2.1.22 when using configure --disable-scdaemon.Aug 1 2017, 7:16 PM

That's it. I can reproduce this on Debian.

This bug is still present in 2.1.23.

Something related seems to still be happening in 2.2.1. make test passes, but here on macOS 10.12.6., my ~/Library/Logs/DiagnosticReports is full of crash reports for scdaemon. As far as I can tell from the timestamps, it looks like scdaemon is *still* getting called by the gpg test suite, even though I built gpg with the flag --disable-scdaemon.

gniibe added a subscriber: gniibe.

I fixed for master.
It will be into 2.2.

Applied to 2.2 branch.