tests/openpgp/defs.scm
@@ -354,7 +354,9 @@
 	       (if (flag "--extended-key-format" *args*)
 		   "enable-extended-key-format" "#enable-extended-key-format")
 	       (string-append "pinentry-program " (tool 'pinentry))
-	       (string-append "scdaemon-program " (tool 'scdaemon))
+	       (if (assoc "scdaemon" gpg-components)
+		   (string-append "scdaemon-program " (tool 'scdaemon))
+		   "# No scdaemon available")
 	       ))
 
 ;; Initialize the test environment, install appropriate configuration
